clusters/building-blocks/other/apps/3d-printer/app/k1c-external-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: printer-k1c
  namespace: default
  labels:
    app.kubernetes.io/name: printer-k1c
spec:
  type: ExternalName
  externalName: 192.168.178.190
  ports:
    - port: 4409
      targetPort: 4409
