clusters/building-blocks/other/apps/3d-printer/app/k1c-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: printer-k1c
  namespace: default
  labels:
    app.kubernetes.io/name: printer-k1c
spec:
  entryPoints:
    - websecure
    - web
    - websocket
  routes:
    - kind: Rule
      match: Host(`print.home.${DOMAIN_NAME}`)
      middlewares:
        - name: websocket
          namespace: edge
      priority: 10
      services:
        - kind: Service
          name: printer-k1c
          namespace: default
          passHostHeader: true
          port: 4409
          scheme: http
